[gd_scene load_steps=2 format=3 uid="uid://cuuog2qqvlbs1"]

[ext_resource type="Script" path="res://scripts/battle_timers.gd" id="1_h2rrs"]

[node name="BattleTimers" type="Node2D"]
position = Vector2(1, 0)
script = ExtResource("1_h2rrs")

[node name="DefenseTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="ResumeDelayTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.5
one_shot = true

[node name="SkillTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="FleeTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.5
one_shot = true
